--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ h2 {
 }
 
 header {
+    color:#4aaaa5;
     background-color: #ffffff;
     margin-bottom: 40px;
     border-bottom: 2px solid #cccccc;
