--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,10 @@ body {
     background-image: url("../images/dust_scratches.png");
     color: #777777;
     line-height: 28px;
-    font-family:
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 18px;
     width: 100%;
+}
 
 #container {
     width: 960px;
